option(QML_CLI "enable compilation of QML client" OFF)

find_package(QT NAMES Qt6 REQUIRED COMPONENTS Core)

if(ANDROID)
    add_subdirectory(3DDicer)
else()
    if (QML_CLI)
    add_subdirectory(android)
    endif()
    add_subdirectory(server)
    add_subdirectory(widget)
    add_subdirectory(rcse)
    add_subdirectory(mindmap)
    if(BUILD_DICE3D)
        add_subdirectory(3DDicer)
    endif()
endif()
